--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -34,7 +34,7 @@
         {{ form.non_field_errors }}
         </div>
     {% endif %}
-        <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Submit</button>
+    <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white" aria-label="Sign up form submission">Submit</button>
 
     </form>
     </div>
