Add virtual environment to .gitignore

--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -7,7 +7,7 @@
           <div class="col-span-1">
               <form method="get" action="{% url 'item:items' %}">
                   <label>
-                      <input name="query" class="w-full py-4 px-6 border rounded-xl" type="text" value="{{ query }}" placeholder="Find your best console of gaming equipment">
+                      <input name="query" class="w-full py-4 px-6 border rounded-xl" type="text" value="{{ query }}" placeholder="Search">
                   </label>
 
                   <button class=" mt-2 py-4 px-8 text-lg bg-teal-500 text-white rounded-xl">Search</button>
